# MierLibC

./: CMakeLists.txt  README.md
parts/c/: CMakeLists.txt
parts/c/include/: stdint.h
sys/MierOS/: CMakeLists.txt
sys/MierOS/include/bits/: stdint.h
sys/MierOS/include/mieros/: syscall.h
sys/MierOS/x86_64/: syscall.c
